checkbox gap fix

--- a/sass/common.scss
+++ b/sass/common.scss
@@ -176,12 +176,11 @@
 
 			.srfm-cbx {
 				display: flex;
-				gap: 8px;
+				gap: var( --srfm-check-gap );
 				align-items: center;
 				-webkit-user-select: none;
 				user-select: none;
 				cursor: pointer;
-				overflow: hidden;
 				transition: 0.2s ease-out;
 
 				&:not( :last-child ) {
@@ -198,7 +197,6 @@
 					transform: translate3d( 0, 0, 0 );
 
 					&:first-child {
-						position: absolute;
 						width: var( --srfm-check-ctn-width );
 						height: var( --srfm-check-ctn-height );
 						border-radius: var( --srfm-checkbox-input-border-radius );
@@ -227,7 +225,6 @@
 
 					&:last-child {
 						position: relative;
-						left: 24px;
 						max-width: calc( 100% - 26px );
 					}
 				}
